--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -26,6 +26,7 @@
         <script src="@routes.Assets.at("tinymce/tinymce.min.js")"></script>
         @*<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js"></script>*@
         <script src="@routes.Assets.at("js/libs/jquery.gray.min.js")"></script>
+        <script src="@routes.Assets.at("js/libs/jquery.collapser.2.0.min.js")"></script>
         <script src="@routes.Assets.at("js/libs/star-rating.2.0.0.min.js")"></script>
         <script src="@routes.Assets.at("js/libs/bootbox.4.3.0.min.js")"></script>
         <script src="@routes.Assets.at("js/site.js")"></script>
