--- a/app/views/contentcolumns/onecolumn.scala.html
+++ b/app/views/contentcolumns/onecolumn.scala.html
@@ -17,7 +17,7 @@
                         @if(!column1Body.isEmpty){ <div class="content-body">@Html(column1Body)</div> }
                     </div>
                     @contentcolumns.columnitems.menu(asideHeader = menuHeader, asideMenu = menuList)
-                    @controllers.AboutController.aboutUs
+                    @SuggestController.aboutUs(request)
                 </div>
             </div>
 
