--- a/app/views/profile/index.scala.html
+++ b/app/views/profile/index.scala.html
@@ -218,11 +218,12 @@
                                     <table class="table inboxTable">
                                         <thead>
                                             <tr>
-                                                <th>Från</th>
-                                                <th>Skickat</th>
-                                                <th>Datum</th>
-                                                <th>Meddelande</th>
-                                                <th>Expandera</th>
+                                                <th></th>
+                                                <th>@Messages("mails.inbox.header.from")</th>
+                                                <th>@Messages("mails.inbox.header.sent")</th>
+                                                <th>@Messages("mails.inbox.header.date")</th>
+                                                <th>@Messages("mails.inbox.header.message")</th>
+                                                <th>@Messages("mails.inbox.header.expand")</th>
                                             </tr>
                                         </thead>
                                         <tbody>
