--- a/app/views/about/about.scala.html
+++ b/app/views/about/about.scala.html
@@ -1,8 +1,11 @@
-@(aboutUsForm: Form[models.viewmodels.AboutUsForm])(implicit request: RequestHeader)
+@(aboutUsForm: Form[models.viewmodels.AboutUsForm])(implicit request: RequestHeader, flash: Flash)
 @import helper.twitterBootstrap._
 
 <div class="col-xs-8 pull-left {col-md-12}">
-    @helper.form(action = controllers.routes.SuggestController.suggestFeatures()) {
+    @helper.form(action = routes.SuggestController.suggestFeatures()) {
+        <div>
+            @shared.flashmsg(flash)
+        </div>
         <fieldset>
             @helper.inputTextHorizontal(aboutUsForm("to"), '_label -> Messages("Till"), 'readonly -> "readonly", 'class -> "col-sm-10")
             @helper.inputTextHorizontal(aboutUsForm("name"), '_label -> Messages("Från"), 'readonly -> "readonly", 'class -> "col-sm-10")
@@ -11,7 +14,7 @@
         </fieldset>
         @helper.inputHidden(aboutUsForm("id"))
         <div class="form-actions">
-            <button class="btn btn-primary pull-right" type="submit">@Messages("Skicka")</button>
+            <button id="send_mail" class="btn btn-primary pull-right" type="submit">@Messages("Skicka")</button>
         </div>
     }
 </div>
