inbox tab öppnad om validering går fel vid svar på förfrågan

--- a/app/views/profile/index.scala.html
+++ b/app/views/profile/index.scala.html
@@ -17,6 +17,12 @@
 
             $(document).ready(function(){
 
+                var url = document.location.toString();
+                if (url.match('#')) {
+                    $('.nav-tabs a[href=#'+url.split('#')[1]+']').tab('show') ;
+                }
+                    //$('.nav-tabs a[href=#inbox-tab]').tab('show') ;
+
             $(".expandBtn1").click(function(){
 
                 var btnArray = this.id.split("expandBtn_" );
