valt meddelande i inboxen är nu expanderat vid validerings fel

--- a/app/views/host/replyGuest.scala.html
+++ b/app/views/host/replyGuest.scala.html
@@ -120,6 +120,7 @@
                             @helper.inputHidden(hostReplyForm("memberId"))
                             @helper.inputHidden(hostReplyForm("hostId"))
                             @helper.inputHidden(hostReplyForm("createdDate"))
+                            @helper.inputHidden(hostReplyForm("messageId"))
                         </fieldset>
                         <br/>
                         <br/>
