--- a/app/views/shared/reviewBox.scala.html
+++ b/app/views/shared/reviewBox.scala.html
@@ -1,6 +1,6 @@
 @(boxes: List[models.viewmodels.ReviewBox] = Nil)
 
-@if(!boxes.isEmpty) {
+@if(boxes.nonEmpty) {
     <div class="col-xs-12">
         <div class="reviews-list">
         @for(box: models.viewmodels.ReviewBox <- boxes){
@@ -11,13 +11,12 @@
                 </a>
                 <div class="bubble"></div>
                 <div class="media-body">
-                    <a href="@box.linkToRatedItem" class="review-ranked-item-link">@Html(box.rankedName)</a>
-                    @shared.grade(inputId = "host-grade", initialValue = box.rating, showCustomCaption = true, disabled = true, size = "xxxs", cssClass = "pull-left")
+                    <div class="pull-left">@Messages("reviewbox.rated.object.text")&nbsp;</div><a href="@box.linkToRatedItem" class="review-ranked-item-link pull-left">@Html(box.rankedName)</a>
+                    @shared.grade(inputId = "host-grade", initialValue = box.rating, showCustomCaption = true, disabled = true, size = "xxxs")
                     <em class="review-date">@box.ratedDate.format(Messages("reviewbox.date.rated.date-format"))</em>
                     @if(box.reviewText.nonEmpty){
                         <hr>
                         <div class="review-text truncate-text-review-boxes">@box.reviewText.get</div>
-                        <a href="#" class="more-text-ctrl text-center" title="@Messages("reviewbox.show-hide-more-text")"></a>
                     }
                 </div>
             </div>
